--- a/src/app/goal.component.css
+++ b/src/app/goal.component.css
@@ -7,7 +7,7 @@
 }
 
 .goal-container .w3-col {
-   height: 120px;
+   height: 150px;
 }
 
 .goal-icon {
@@ -29,4 +29,9 @@ canvas {
    z-index: 1;
    position: relative;
    top: 2px;
+}
+
+.goal-increment-title {
+   position: relative;
+   top: -107px;
 }
