--- a/src/app/goal.component.html
+++ b/src/app/goal.component.html
@@ -7,15 +7,18 @@
       <div class="w3-row-padding">
          <div *ngFor="let increment of goal.increments; let i = index" class="w3-col s2 w3-padding">
             <div *ngIf="increment.completed">
-               <img src="../assets/icons/filled-circle.jpg" class="goal-icon-finished">
+               <img src="../assets/icons/filled-{{goal.icon}}.jpg" class="goal-icon-finished">
+               <h5>{{ goal.increment | currency }}</h5>
             </div>
             <div *ngIf="!increment.completed">
                <canvas id="canvas{{i}}" width="100" height="100" style="margin: auto; border: 1px solid black;">
 
                </canvas>
-               <img src="../assets/icons/empty-circle.png" class="goal-icon"
+               <img src="../assets/icons/empty-{{goal.icon}}.png" class="goal-icon"
                (mousemove)="ev_canvas($event, i)" (mousedown)="ev_canvas($event, i)" (mouseup)="ev_canvas($event, i)">
+               <h5 class="goal-increment-title">{{ goal.increment | currency }}</h5>
             </div>
+            
          </div>
       </div>
       
