--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
          <h3>Hello, {{username}}</h3>
       </div>
    </div>
-   <div class="w3-container w3-padding-top-32">
+   <div class="w3-container w3-padding-32" style="background-color: white;">
       <router-outlet></router-outlet>
    </div>
    <div class="footer">
