--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,17 +1,17 @@
 <div class="w3-display-container w3-margin-bottom">
    <div class="w3-right">
-      <button class="w3-button fox-green" (click)="openModal('taskModal')">New Goal</button>
+      <button class="w3-button fox-green" (click)="newTask()">New Goal</button>
    </div>
 </div><br /><br />
-<table class="w3-table-all goal-table w3-margin-top">
+<table class="w3-table-all goal-table w3-margin-top" style="max-width: 850px; font-size: 1.1em; margin:auto;">
    <tr>
       <th>Name</th>
-      <th>Target Amount</th>
       <th>Saved</th>
+      <th>Target Amount</th>
    </tr>
    <tr *ngFor="let goal of goals" (click)="editGoal(goal)" class="goal-row">
       <td>{{ goal.name }}</td>
+      <td>{{ goal.saved | currency }}</td>
       <td>{{ goal.target | currency }}</td>
-      <td>{{ (goal.target - goal.saved) | currency }}</td>
    </tr>
 </table>
