--- a/src/styles.css
+++ b/src/styles.css
@@ -297,3 +297,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
    animation: fadeOut 2s;
    animation-fill-mode: forwards;
 }
+
+.fox-green {
+   background-color: #39998E !important;
+   color: white !important;
+}
